Transformers from basic modules

--- a/minivit_custom_nn.ipynb
+++ b/minivit_custom_nn.ipynb
@@ -41,6 +41,7 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "import math\n",
     "\n",
     "import torch\n",
     "import torch.utils.data as tud\n",
@@ -110,6 +111,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b56555aa-7551-4dfd-8a04-e155cc969820",
+   "metadata": {},
+   "source": [
+    "Unlike my other notebook, the cell below builds up a transformer from smaller units instead of using the one built in to torch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbe7192c-caaf-4158-ac54-6590f4a8be10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SDPA(nn.Module):\n",
+    "    def __init__(self, positions, dkv):\n",
+    "        super().__init__()\n",
+    "        self.pos = positions\n",
+    "        self.d = dkv\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "        \n",
+    "    def forward(self, q, k, v):\n",
+    "        assert(self.d == k.shape[-1])\n",
+    "        q_dot_k = torch.bmm(q, (k.transpose(-2, -1)))\n",
+    "        scaled = q_dot_k / (math.sqrt(self.d))\n",
+    "        logits = self.softmax(scaled)\n",
+    "        out = torch.bmm(logits, v)\n",
+    "        return out\n",
+    "\n",
+    "class Head(nn.Module):\n",
+    "    def __init__(self, positions, dkv, dmodel):\n",
+    "        super().__init__()\n",
+    "        self.v_projection = nn.Linear(dmodel, dkv)\n",
+    "        self.k_projection = nn.Linear(dmodel, dkv)\n",
+    "        self.q_projection = nn.Linear(dmodel, dkv)\n",
+    "\n",
+    "        self.sdpa = SDPA(positions, dkv)\n",
+    "\n",
+    "    def forward(self, v, k, q):\n",
+    "        vp = self.v_projection(v)\n",
+    "        kp = self.k_projection(k)\n",
+    "        qp = self.q_projection(q)\n",
+    "        return self.sdpa(qp, kp, vp)\n",
+    "\n",
+    "class MHA(nn.Module):\n",
+    "    def __init__(self, positions, nhead, dmodel):\n",
+    "        super().__init__()\n",
+    "        assert(dmodel % nhead == 0)\n",
+    "        self.heads = nn.ModuleList([Head(positions, dmodel//nhead, dmodel) for _ in range(nhead)])\n",
+    "        \n",
+    "        # TODO In the paper it's called WO, and hd_v x dmodel, but b/c d_v = dmodel/h it turns out to be square.\n",
+    "        self.out_projection = nn.Linear(dmodel, dmodel)\n",
+    "\n",
+    "    def forward(self, v, k, q):\n",
+    "        head_outputs = [h(v, k, q) for h in self.heads]\n",
+    "        catd = torch.cat(head_outputs, dim=-1)\n",
+    "        \n",
+    "        projection = self.out_projection(catd)\n",
+    "        return projection\n",
+    "\n",
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, dmodel, ff, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.f0 = nn.Linear(dmodel, ff)\n",
+    "        self.f1 = nn.Linear(ff, dmodel)\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        self.act = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.f0(x)\n",
+    "        x = self.act(x)\n",
+    "        x = self.f1(x)\n",
+    "        x = self.dropout(x)\n",
+    "        return x\n",
+    "\n",
+    "# Input/Output are Batch, Positions, then Model Dimension.\n",
+    "class TransformerDecoder(nn.Module):\n",
+    "    def __init__(self, positions, dmodel, ff, nhead, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.mha0 = MHA(positions, nhead, dmodel)\n",
+    "        self.layernorm0 = nn.LayerNorm(dmodel)\n",
+    "        self.mha1 = MHA(positions, nhead, dmodel)\n",
+    "        self.layernorm1 = nn.LayerNorm(dmodel)\n",
+    "        self.feedforward = FeedForward(dmodel, ff, dropout)\n",
+    "        self.layernorm2 = nn.LayerNorm(dmodel)\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "\n",
+    "    def forward(self, inputs, cross=None): \n",
+    "        x = self.mha0(inputs, inputs, inputs)\n",
+    "        x = self.layernorm0(x + inputs)\n",
+    "\n",
+    "        x_pre_mha1 = x\n",
+    "        if cross is not None:\n",
+    "            x = self.mha1(cross, cross, x)\n",
+    "        else:\n",
+    "            x = self.mha1(x, x, x)\n",
+    "        x = self.layernorm1(x + x_pre_mha1)\n",
+    "\n",
+    "        x_pre_ff = x\n",
+    "        x = self.feedforward(x)\n",
+    "        x = self.layernorm2(x + x_pre_ff)\n",
+    "        return x\n",
+    "\n",
+    "class Transformer(nn.Module):\n",
+    "    def __init__(self, positions, dmodel, ff, nhead, nlayers, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.transformer_layers = nn.ModuleList([TransformerDecoder(positions, dmodel, ff, nhead=nhead, dropout=dropout) for _ in range(nlayers)])\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        for layer in self.transformer_layers:\n",
+    "            x = layer(x)\n",
+    "        return x"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "031213c6-9dcc-4a27-bf44-f419c29e7d06",
@@ -149,25 +265,6 @@
     "        x = self.dropout(x)\n",
     "        return x\n",
     "\n",
-    "class Transformer(nn.Module):\n",
-    "    def __init__(self, emb_len, patch_num, layers=8, heads=4, dim_ff=512, dropout=0.1):\n",
-    "        super().__init__()\n",
-    "        encoder_layer = nn.TransformerEncoderLayer(\n",
-    "            d_model=emb_len,\n",
-    "            nhead=heads,\n",
-    "            dim_feedforward=dim_ff,\n",
-    "            dropout=dropout,\n",
-    "            batch_first=True # <-- This took me forever to find, default is to place batch in the second dimension\n",
-    "        )\n",
-    "        self.transformer = nn.TransformerEncoder(\n",
-    "            encoder_layer,\n",
-    "            num_layers=layers,\n",
-    "        )\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        y = self.transformer(x)\n",
-    "        return y\n",
-    "\n",
     "class ClassHead(nn.Module):\n",
     "    def __init__(self, emb_len, patch_num, hidden_sz, classes, dropout=0.1):\n",
     "        super().__init__()\n",
@@ -191,7 +288,7 @@
     "        super().__init__()\n",
     "        self.tokenizer = Tokenizer(3, emb_dim, patchsz)\n",
     "        self.embeddings = Embeddings(emb_dim, patch_num, 0.1) # 64 = (32 / 4)**2\n",
-    "        self.transformer = Transformer(emb_dim, patch_num + 1, layers=layers, heads=heads, dim_ff=dim_ff)\n",
+    "        self.transformer = Transformer(patch_num + 1, emb_dim, dim_ff, heads, layers, dropout=0.1)\n",
     "        self.class_head = ClassHead(emb_dim, patch_num + 1, 256, num_classes)\n",
     "        if load and os.path.isfile(load):\n",
     "            print(f\"Will load weights from {load}\")\n",
@@ -229,7 +326,7 @@
     "    emb_dim,\n",
     "    layers=4,\n",
     "    heads=4,\n",
-    "    dim_ff=4*emb_dim,\n",
+    "    dim_ff=4*128,\n",
     "    load='vit_classification.pth'  # Set to the saved model path to start from a checkpoint.\n",
     ").to(device)\n",
     "from torchinfo import summary; print(summary(vit, (1, 3, 32, 32)))\n",
