Edit scratch minivit to be more consistent with torch transformer

--- a/minivit_custom_nn.ipynb
+++ b/minivit_custom_nn.ipynb
@@ -6,11 +6,14 @@
    "metadata": {},
    "source": [
     "# A miniature implementation of ViT\n",
-    "Train your own ViT model with vanilla pytorch.\n",
+    "Train your own hackable ViT model with vanilla pytorch\n",
     "\n",
-    "Expected to reach ~70%+ classification accuracy on CIFAR10.\n",
-    "\n",
-    "Model dimensions have been adjusted to train quickly and work with 32x32 pixel images. The preset parameters let you train this model with only <1GB VRAM.\n",
+    "## Details\n",
+    "* 843k parameters as written, needing 1.3GB VRAM. ~2:30 per epoch on 8-core CPU, ~0:10 on 3050ti.\n",
+    "* Expected to reach ~70%+ classification accuracy on CIFAR10.\n",
+    "* Model dimensions have been adjusted to train quickly and work with 32x32 pixel images.\n",
+    "* Builds the transformer from basic layers and does not use torch's transformer blocks.\n",
+    "* Comparable final accuracy to an implementation using torch's transformer.\n",
     "\n",
     "## References\n",
     "https://github.com/tintn/vision-transformer-from-scratch\n",
@@ -56,6 +59,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21e2991a-6683-4273-bd66-ea8e9fd7282d",
+   "metadata": {},
+   "source": [
+    "# Datasets"
    ]
   },
   {
@@ -115,7 +126,7 @@
    "id": "b56555aa-7551-4dfd-8a04-e155cc969820",
    "metadata": {},
    "source": [
-    "Unlike my other notebook, the cell below builds up a transformer from smaller units instead of using the one built in to torch."
+    "# Transformer Block"
    ]
   },
   {
@@ -131,7 +142,7 @@
     "        self.pos = positions\n",
     "        self.d = dkv\n",
     "        self.softmax = nn.Softmax(dim=-1)\n",
-    "        \n",
+    "\n",
     "    def forward(self, q, k, v):\n",
     "        assert(self.d == k.shape[-1])\n",
     "        q_dot_k = torch.bmm(q, (k.transpose(-2, -1)))\n",
@@ -160,14 +171,14 @@
     "        super().__init__()\n",
     "        assert(dmodel % nhead == 0)\n",
     "        self.heads = nn.ModuleList([Head(positions, dmodel//nhead, dmodel) for _ in range(nhead)])\n",
-    "        \n",
+    "\n",
     "        # TODO In the paper it's called WO, and hd_v x dmodel, but b/c d_v = dmodel/h it turns out to be square.\n",
     "        self.out_projection = nn.Linear(dmodel, dmodel)\n",
     "\n",
     "    def forward(self, v, k, q):\n",
     "        head_outputs = [h(v, k, q) for h in self.heads]\n",
     "        catd = torch.cat(head_outputs, dim=-1)\n",
-    "        \n",
+    "\n",
     "        projection = self.out_projection(catd)\n",
     "        return projection\n",
     "\n",
@@ -187,42 +198,41 @@
     "        return x\n",
     "\n",
     "# Input/Output are Batch, Positions, then Model Dimension.\n",
-    "class TransformerDecoder(nn.Module):\n",
+    "class TransformerBlock(nn.Module):\n",
     "    def __init__(self, positions, dmodel, ff, nhead, dropout=0.1):\n",
     "        super().__init__()\n",
-    "        self.mha0 = MHA(positions, nhead, dmodel)\n",
+    "        self.mha = MHA(positions, nhead, dmodel)\n",
     "        self.layernorm0 = nn.LayerNorm(dmodel)\n",
-    "        self.mha1 = MHA(positions, nhead, dmodel)\n",
-    "        self.layernorm1 = nn.LayerNorm(dmodel)\n",
     "        self.feedforward = FeedForward(dmodel, ff, dropout)\n",
-    "        self.layernorm2 = nn.LayerNorm(dmodel)\n",
+    "        self.layernorm1 = nn.LayerNorm(dmodel)\n",
     "        self.dropout = nn.Dropout(p=dropout)\n",
     "\n",
-    "    def forward(self, inputs, cross=None): \n",
-    "        x = self.mha0(inputs, inputs, inputs)\n",
+    "    def forward(self, inputs):\n",
+    "        x = self.mha(inputs, inputs, inputs)\n",
     "        x = self.layernorm0(x + inputs)\n",
-    "\n",
-    "        x_pre_mha1 = x\n",
-    "        if cross is not None:\n",
-    "            x = self.mha1(cross, cross, x)\n",
-    "        else:\n",
-    "            x = self.mha1(x, x, x)\n",
-    "        x = self.layernorm1(x + x_pre_mha1)\n",
     "\n",
     "        x_pre_ff = x\n",
     "        x = self.feedforward(x)\n",
-    "        x = self.layernorm2(x + x_pre_ff)\n",
+    "        x = self.layernorm1(x + x_pre_ff)\n",
     "        return x\n",
     "\n",
     "class Transformer(nn.Module):\n",
     "    def __init__(self, positions, dmodel, ff, nhead, nlayers, dropout=0.1):\n",
     "        super().__init__()\n",
-    "        self.transformer_layers = nn.ModuleList([TransformerDecoder(positions, dmodel, ff, nhead=nhead, dropout=dropout) for _ in range(nlayers)])\n",
+    "        self.transformer_layers = nn.ModuleList([TransformerBlock(positions, dmodel, ff, nhead=nhead, dropout=dropout) for _ in range(nlayers)])\n",
     "\n",
     "    def forward(self, x):\n",
     "        for layer in self.transformer_layers:\n",
     "            x = layer(x)\n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe9270f5-73dc-47b9-ba33-af52988da127",
+   "metadata": {},
+   "source": [
+    "# ViT Specific layers"
    ]
   },
   {
@@ -237,7 +247,7 @@
     "    def __init__(self, c_in, emb_len, patch_dim):\n",
     "        super().__init__()\n",
     "        self.conv0 = nn.Conv2d(c_in, emb_len, patch_dim, stride=patch_dim)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        x = self.conv0(x)\n",
     "        x = x.flatten(2)\n",
@@ -255,10 +265,10 @@
     "            torch.randn(1, patch_num + 1, emb_len)\n",
     "        )\n",
     "        self.dropout = nn.Dropout(dropout)\n",
-    "    \n",
+    "\n",
     "    def forward(self, x):\n",
     "        b, p2, c = x.shape\n",
-    "        \n",
+    "\n",
     "        cls_tok = self.cls_token.expand(b, -1, -1)\n",
     "        x = torch.cat((cls_tok, x), dim=1)\n",
     "        x = x + self.pos_emb\n",
@@ -272,7 +282,7 @@
     "        self.activation = nn.ReLU()\n",
     "        self.fc1 = nn.Linear(hidden_sz, classes)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
-    "    \n",
+    "\n",
     "    def forward(self, inp):\n",
     "        # We're slicing out the CLS token slot here. This is the only slot that matters.\n",
     "        x = inp[:, 0, :]\n",
@@ -306,6 +316,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e478a4bb-90fe-4010-a6ef-b4b45d505609",
+   "metadata": {},
+   "source": [
+    "# Training Loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "894d610b-31f4-4bb3-a412-9015ab1ac43a",
@@ -329,7 +347,16 @@
     "    dim_ff=4*128,\n",
     "    load='vit_classification.pth'  # Set to the saved model path to start from a checkpoint.\n",
     ").to(device)\n",
-    "from torchinfo import summary; print(summary(vit, (1, 3, 32, 32)))\n",
+    "\n",
+    "# Comment this out and rerun the cell if it errors, but if it works it improves performance.\n",
+    "# If compiling expect the first run to be slow.\n",
+    "vit = torch.compile(vit)\n",
+    "\n",
+    "# !pip install torchinfo\n",
+    "try:\n",
+    "    from torchinfo import summary; print(summary(vit, (1, 3, 32, 32), device=device))\n",
+    "except ImportError:\n",
+    "    print(\"torchinfo isn't installed. Try `pip install torchinfo` to see a summary of the model shapes and param counts\")\n",
     "\n",
     "epochs = 100\n",
     "optimizer = torch.optim.AdamW(vit.parameters(), lr=1e-3, weight_decay=1e-2)\n",
@@ -379,13 +406,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a371235-3813-4008-912a-78f49bb5826a",
+   "metadata": {},
+   "source": [
+    "# Evaluation with Confusion Matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1b9e9f54-c0e7-4fc9-a505-c16074ecbe5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install scikit-learn \n",
+    "# !pip install scikit-learn\n",
     "from sklearn import metrics\n",
     "\n",
     "evals = cifar_eval\n",
@@ -396,7 +431,7 @@
     "    for image, target in tqdm(cifar_eval):\n",
     "        pred = vit(image.unsqueeze(0).float().to(device))\n",
     "        pred = F.softmax(pred, dim=1).argmax()\n",
-    "        \n",
+    "\n",
     "        y_pred.append(pred.item())\n",
     "        y_true.append(target)\n",
     "\n",
