Add some bonuses to ViT and textgen examples

--- a/minivit_custom_nn.ipynb
+++ b/minivit_custom_nn.ipynb
@@ -299,7 +299,7 @@
     "        self.tokenizer = Tokenizer(3, emb_dim, patchsz)\n",
     "        self.embeddings = Embeddings(emb_dim, patch_num, 0.1) # 64 = (32 / 4)**2\n",
     "        self.transformer = Transformer(patch_num + 1, emb_dim, dim_ff, heads, layers, dropout=0.1)\n",
-    "        self.class_head = ClassHead(emb_dim, patch_num + 1, 256, num_classes)\n",
+    "        self.class_head = ClassHead(emb_dim, patch_num + 1, 2*emb_dim, num_classes)\n",
     "        if load and os.path.isfile(load):\n",
     "            print(f\"Will load weights from {load}\")\n",
     "            self.load_state_dict(torch.load(load))\n",
@@ -348,10 +348,6 @@
     "    load='vit_classification.pth'  # Set to the saved model path to start from a checkpoint.\n",
     ").to(device)\n",
     "\n",
-    "# Comment this out and rerun the cell if it errors, but if it works it improves performance.\n",
-    "# If compiling expect the first run to be slow.\n",
-    "vit = torch.compile(vit)\n",
-    "\n",
     "# !pip install torchinfo\n",
     "try:\n",
     "    from torchinfo import summary; print(summary(vit, (1, 3, 32, 32), device=device))\n",
@@ -366,7 +362,7 @@
     "loss_plot = []\n",
     "for epoch in range(epochs):\n",
     "    vit.train()\n",
-    "    for i, (images, target) in enumerate(tqdm(train_loader)):\n",
+    "    for i, (images, target) in enumerate(train_loader):\n",
     "        optimizer.zero_grad()\n",
     "        images = images.float().to(device)\n",
     "        targets = target.to(device)\n",
@@ -383,11 +379,11 @@
     "    vit.eval() # Certain layers like dropout behave differently during evaluation vs training.\n",
     "    correct = 0\n",
     "    total = len(cifar_eval)\n",
-    "    for i, (images, target) in enumerate(tqdm(val_loader)):\n",
+    "    for i, (images, target) in enumerate(val_loader):\n",
     "        with torch.no_grad():\n",
     "            images = images.float().to(device)\n",
     "            targets = target.to(device)\n",
-    "            outs = vit(images)\n",
+    "            outs  = vit(images)\n",
     "            loss = lossfn(outs, targets)\n",
     "            losses.append(loss)\n",
     "            for x in range(outs.shape[0]):\n",
@@ -414,31 +410,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b9e9f54-c0e7-4fc9-a505-c16074ecbe5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install scikit-learn\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "evals = cifar_eval\n",
-    "right = 0; total = 0; y_pred=[]; y_true=[]\n",
-    "\n",
-    "vit.eval()\n",
-    "with torch.no_grad():\n",
-    "    for image, target in tqdm(cifar_eval):\n",
-    "        pred = vit(image.unsqueeze(0).float().to(device))\n",
-    "        pred = F.softmax(pred, dim=1).argmax()\n",
-    "\n",
-    "        y_pred.append(pred.item())\n",
-    "        y_true.append(target)\n",
-    "\n",
-    "metrics.ConfusionMatrixDisplay.from_predictions(y_true, y_pred, normalize='true')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e5478b9c-1d62-4cc3-91b8-37cffdc7f458",
    "metadata": {},
@@ -457,6 +428,88 @@
     "9:\"Truck\"\n",
     "```\n",
     "Your confusion matrix will likely show error between 3 and 5, cats and dogs, which seems reasonable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b9e9f54-c0e7-4fc9-a505-c16074ecbe5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install scikit-learn\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "evals = cifar_eval\n",
+    "right = 0; total = 0; y_pred=[]; y_true=[]\n",
+    "\n",
+    "vit.eval()\n",
+    "with torch.no_grad():\n",
+    "    for image, target in tqdm(cifar_eval):\n",
+    "        pred  = vit(image.unsqueeze(0).float().to(device))\n",
+    "        pred = F.softmax(pred, dim=1).argmax()\n",
+    "\n",
+    "        y_pred.append(pred.item())\n",
+    "        y_true.append(target)\n",
+    "\n",
+    "metrics.ConfusionMatrixDisplay.from_predictions(y_true, y_pred, normalize='true')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d677da-9e08-4c7c-8e30-ab1d1d7ade45",
+   "metadata": {},
+   "source": [
+    "# Deep Similarity\n",
+    "ViT can also be adapted for similarity search. When trained on a classification task, the output state of the [CLS] token will tend to be similar for objects in the same class.\n",
+    "You can see that by rerunning the cell below a few times. On each pass, two images are randomly selected and the last hidden state before the classification head is saved.\n",
+    "\n",
+    "Broadly, the similarity should be high for objects within the same class. It would also make sense for objects that show signifcant overlap on the similarity matrix to\n",
+    "also have similar embeddings.\n",
+    "\n",
+    "However since this model is not trained to produce any particular embeddings, don't expect too much."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82157fb1-c2d1-4203-8a44-5cea70ab4afd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hidden_state = []\n",
+    "def hook(model, input, output):\n",
+    "    hidden_state.append(output[0, 0, :].detach())\n",
+    "    \n",
+    "# Using a forward hook lets you grab the output of a specific layer without\n",
+    "# changing model code.\n",
+    "vit.transformer.register_forward_hook(hook)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bd27027-ebcc-4d00-9ddb-88cd3a9e9887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vit.eval()\n",
+    "sz = len(cifar_eval)\n",
+    "import random\n",
+    "\n",
+    "hidden_state = []\n",
+    "sim_metric = nn.CosineSimilarity(dim=0, eps=1e-6)\n",
+    "with torch.no_grad():\n",
+    "    i0, t0 = cifar_eval[random.randint(0, sz)]\n",
+    "    i1, t1 = cifar_eval[random.randint(1, sz)]\n",
+    "    \n",
+    "    pred0 = vit(i0.unsqueeze(0).float().to(device))\n",
+    "    pred1 = vit(i1.unsqueeze(0).float().to(device))\n",
+    "\n",
+    "    sim = sim_metric(hidden_state[0], hidden_state[1])\n",
+    "    print(f\"Targets are {t0} and {t1}, similarity {sim}\")\n",
+    "    ims = torch.cat((i0, i1), dim=2).squeeze().permute(1, 2, 0)\n",
+    "    plt.imshow(ims.cpu().numpy())"
    ]
   },
   {
